refactor(datagen): 迁移数据生成 API